--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "vue3-chrome-ext-boilerplate",
+  "name": "web-note-chrome-ext",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "cross-env NODE_ENV=development webpack --mode=development --progress --hot --watch",
+    "build": "cross-env NODE_ENV=production webpack --mode=production --progress"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -16,9 +15,18 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "@vue/devtools": "^5.3.3",
     "babel-eslint": "^10.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "cross-env": "^7.0.2",
+    "crx-hotreload": "^1.0.4",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "html-webpack-plugin": "^4.5.0",
+    "vue-loader": "^16.0.0",
+    "webpack": "^5.8.0",
+    "webpack-cli": "^4.2.0"
   },
   "eslintConfig": {
     "root": true,
