--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "cross-env": "^7.0.2",
     "crx-hotreload": "^1.0.4",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "vue-loader": "^16.0.0",
     "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-extension-reloader": "^1.1.4"
   },
   "eslintConfig": {
     "root": true,
