--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/devtools": "^5.3.3",
     "babel-eslint": "^10.1.0",
@@ -21,11 +18,13 @@
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.2",
     "crx-hotreload": "^1.0.4",
+    "css-loader": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-beta.4",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "vue-loader": "^16.0.0",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^5.8.0",
     "webpack-cli": "^4.2.0",
     "webpack-extension-reloader": "^1.1.4"
