--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/devtools": "^5.3.3",
+    "@vue/devtools": "^6.0.0-beta.2",
     "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.3.2",
