--- a/package.json
+++ b/package.json
@@ -6,42 +6,47 @@
     "dev": "cross-env NODE_ENV=development webpack --mode=development --progress --hot --watch",
     "build": "cross-env NODE_ENV=production webpack --mode=production --progress"
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
-  },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/devtools": "^6.0.0-beta.2",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/babel-plugin-jsx": "^1.0.3",
+    "@vue/compiler-sfc": "^3.0.7",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "cross-env": "^7.0.2",
-    "crx-hotreload": "^1.0.4",
-    "css-loader": "^5.0.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
-    "vue-loader": "^16.0.0",
-    "vue-style-loader": "^4.1.2",
-    "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-extension-reloader": "^1.1.4"
+    "copy-webpack-plugin": "^8.0.0",
+    "cross-env": "^7.0.3",
+    "crx-hotreload": "^1.0.6",
+    "css-loader": "^5.1.3",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.7.0",
+    "html-webpack-plugin": "^5.3.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "tailwindcss": "^2.0.4",
+    "ts-loader": "^8.0.18",
+    "typescript": "^4.2.3",
+    "vue-loader": "^16.1.2",
+    "webpack": "^5.27.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+  "dependencies": {
+    "ant-design-vue": "^2.0.1",
+    "vue": "^3.0.7",
+    "vue-router": "^4.0.5",
+    "vuex": "^4.0.0"
   },
   "browserslist": [
     "> 1%",
